appId: com.deha.mobile
---
- launchApp
- assertVisible: "Primitives"
- scrollUntilVisible:
    element: "PAGINATION"
    direction: DOWN
- assertVisible: "PAGINATION"
- assertVisible: "Page 3 of 8"
- tapOn:
    text: "4"
- assertVisible: "Page 4 of 8"
- tapOn:
    text: "5"
- assertVisible: "Page 5 of 8"
